# goby

./: .bzrignore  .clang-format  .gitignore  AUTHORS  BUILD  CMakeLists.txt  CONFIGURE  COPYING  CTestConfig.cmake  DEPENDENCIES  INSTALL  INSTALL.txt  README  README.md  build.sh  dccl.cpp  dccl_ccl_compatibility.cpp  dccl_ccl_compatibility.h  dccl_common.h  dccl_exception.h  dccl_field_codec_arithmetic.cpp  dccl_field_codec_default.cpp  dccl_field_codec_default.h  dccl_field_codec_default_message.cpp  dccl_field_codec_helpers.h  dccl_type_helper.cpp  dccl_type_helper.h  goby_build.sh  protobuf_cpp_type_helpers.h  release.txt
share/examples/: .gitignore  CMakeLists.txt  README
share/examples/acomms/: CMakeLists.txt
share/examples/cmake_modules/: FindGoby.cmake  FindProtobufGobyExamples.cmake
share/examples/core/: CMakeLists.txt
share/examples/moos/: CMakeLists.txt
src/: CMakeLists.txt  acomms.h  core.h  util.h  version.h
src/acomms/: CMakeLists.txt  acomms_constants.h  acomms_helpers.h  amac.h  bind.h  connect.h  dccl.h  ip_codecs.cpp  ip_codecs.h  mmdriver.h  modem_driver.h  modem_message.h  queue.h  route.h  xml_parser.h
src/acomms/amac/: CMakeLists.txt  mac_manager.cpp  mac_manager.h
src/acomms/dccl/: CMakeLists.txt  WhoiUtil.cpp  WhoiUtil.h  dccl.cpp  dccl.h  dccl_bitset.cpp  dccl_bitset.h  dccl_ccl_compatibility.cpp  dccl_ccl_compatibility.h  dccl_common.h  dccl_exception.h  dccl_field_codec.cpp  dccl_field_codec.h  dccl_field_codec_arithmetic.cpp  dccl_field_codec_arithmetic.h  dccl_field_codec_default.cpp  dccl_field_codec_default.h  dccl_field_codec_default_message.cpp  dccl_field_codec_default_message.h  dccl_field_codec_fixed.h  dccl_field_codec_helpers.cpp  dccl_field_codec_helpers.h  dccl_field_codec_manager.cpp  dccl_field_codec_manager.h  dccl_field_codec_typed.h  dccl_type_helper.cpp  dccl_type_helper.h  protobuf_cpp_type_helpers.h
src/acomms/examples/: CMakeLists.txt
src/acomms/lib_acomms_util/: acomms_constants.h  modem_message.h  tes_utils.h  xerces_strings.h  xml_parser.h
src/acomms/lib_dccl/: CMakeLists.txt  dccl.cpp  dccl.h  dccl_constants.h  makefile  message.cpp  message.h  message_algorithms.cpp  message_algorithms.h  message_publish.cpp  message_publish.h  message_queuing.cpp  message_queuing.h  message_schema.xsd  message_val.cpp  message_val.h  message_var.cpp  message_var.h  message_xml_callbacks.cpp  message_xml_callbacks.h  message_xml_tags.h
src/acomms/lib_mmdriver/: CMakeLists.txt  mm_driver.cpp  mm_driver.h
src/acomms/lib_queue/: in_queue.h  out_queue.h
src/acomms/libacomms_util/: acomms_constants.h  modem_message.h  xerces_strings.h  xml_parser.h
src/acomms/libamac/: CMakeLists.txt  mac_manager.cpp  (+1 more)
src/apps/: CMakeLists.txt
src/common/: CMakeLists.txt  acomms_abc_driver.proto  acomms_amac.proto  acomms_dccl.proto  acomms_mm_driver.proto  acomms_option_extensions.proto  acomms_queue.proto  application_base.cpp  application_base.h  configuration_reader.cpp  configuration_reader.h  core_app_base_config.proto  core_config.proto  core_constants.h  core_database_request.proto  core_helpers.h  exception.h  hdf5_plugin.h  io_service.h  liaison_container.h  logger.h  node_interface.h  option_extensions.proto  pubsub_node_wrapper.h  time.cpp  time.h  util_logger.proto  zeromq_application_base.h  zeromq_packet.h  zeromq_service.cpp  zeromq_service.h
src/core/: CMakeLists.txt  core.h  core_constants.h  core_helpers.h  dbo.h  moos_mimic.h
src/doc/: CMakeLists.txt  README
src/moos/: CMakeLists.txt  dynamic_moos_vars.h  goby_moos_app.cpp  goby_moos_app.h  liaison_acomms.cpp  liaison_acomms.h  liaison_commander.cpp  liaison_commander.h  liaison_geodesy.cpp  liaison_geodesy.h  liaison_scope.cpp  liaison_scope.h  modem_id_convert.cpp  modem_id_convert.h  moos_bluefin_driver.cpp  moos_bluefin_driver.h  moos_dbo_helper.cpp  moos_dbo_helper.h  moos_geodesy.cpp  moos_geodesy.h  moos_header.h  moos_liaison_load.cpp  moos_liaison_load.h  moos_node.cpp  moos_node.h  moos_protobuf_helpers.cpp  moos_protobuf_helpers.h  moos_serializer.h  moos_string.h  moos_translator.cpp  moos_translator.h  moos_ufield_sim_driver.cpp  moos_ufield_sim_driver.h  tes_moos_app.cpp  tes_moos_app.h
src/pb/: CMakeLists.txt  application.cpp  application.h  application_base.cpp  application_base.h  core_constants.h  core_helpers.h  database_client.h  dbo.h  iridium_driver.cpp  iridium_driver.h  iridium_driver_common.h  iridium_driver_fsm.cpp  iridium_driver_fsm.h  iridium_shore_driver.cpp  iridium_shore_driver.h  iridium_shore_rudics.h  iridium_shore_sbd.h  moos_mimic.h  pb_modem_driver.cpp  pb_modem_driver.h  protobuf_node.cpp  protobuf_node.h  protobuf_pubsub_node_wrapper.h  pubsub_node_wrapper.h  rudics_packet.cpp  rudics_packet.h  subscription.h  zeromq_application_base.h  zeromq_service.h
src/perls/: CMakeLists.txt
src/protobuf/: CMakeLists.txt  abc_driver.proto  acomms_abc_driver.proto  acomms_amac.proto  acomms_driver_base.proto  acomms_mm_driver.proto  acomms_modem_message.proto  acomms_option_extensions.proto  acomms_proto_helpers.cpp  acomms_proto_helpers.h  acomms_queue.proto  amac.proto  app_base_config.proto  config.proto  core_app_base_config.proto  core_config.proto  core_database_config.proto  core_database_request.proto  core_pubsub_node_config.proto  dccl.proto  dccl_option_extensions.proto  driver_base.proto  dynamic_protobuf_manager.cpp  dynamic_protobuf_manager.h  header.proto  interprocess_notification.proto  mm_driver.proto  modem_message.proto  moos_transitional.proto  option_extensions.proto  pubsub_node_config.proto  queue.proto  queue_option_extensions.proto  transitional.proto  util_linebasedcomms.proto  util_logger.proto  xml_config.proto  zero_mq_node_config.proto
src/test/: CMakeLists.txt
src/util/: CMakeLists.txt  as.h  asioclient.h  base_convert.h  binary.h  configuration_reader.cpp  configuration_reader.h  dynamic_protobuf_manager.cpp  dynamic_protobuf_manager.h  flexcout.h  flexostream.h  gtime.h  linebasedcomms.h  logger.h  primitive_types.h  sci.h  serial.h  streamlogger.h  string.h  tes_utils.h  time.cpp  time.h
(+1374 files in other folders)
